--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "babel": "^5.2.15",
+    "comfy": "^0.1.0",
+    "rethinkdb": "^2.0.0",
     "socket.io": "^1.3.5"
   },
   "scripts": {
