Add config and example, update .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
+  "ecmaFeatures": {
+    "modules": true
+  },
   "env": {
     "browser": false,
-    "node": true
+    "node": true,
+    "es6": true
   }
 }
