--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "scripts": {
     "start": "node_modules/babel/bin/babel-node src/scum.js"
+  },
+  "devDependencies": {
+    "dotenv": "^1.1.0"
   }
 }
