--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "babel": "^5.2.15",
     "comfy": "^0.1.0",
     "rethinkdb": "^2.0.0",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "dotenv": "^1.1.0"
   },
   "scripts": {
-    "start": "node_modules/babel/bin/babel-node src/scum.js"
+    "start": "node_modules/.bin/babel-node lib/scum.js",
+    "test": "NODE_ENV=test node_modules/.bin/mocha"
   },
   "devDependencies": {
-    "dotenv": "^1.1.0"
+    "mocha": "^2.2.4",
+    "socket.io-client": "^1.3.5"
   }
 }
