--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dotenv": "^1.1.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/babel-node lib/scum.js",
+    "start": "node_modules/.bin/babel-node lib/server.js",
     "test": "NODE_ENV=test node_modules/.bin/mocha"
   },
   "devDependencies": {
