--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "babel": "^5.2.15",
-    "comfy": "^0.1.0",
+    "bunyan": "^1.3.6",
+    "comfy": "^0.1.2",
+    "dotenv": "^1.1.0",
+    "express": "^4.12.4",
+    "node-uuid": "^1.4.3",
     "rethinkdb": "^2.0.0",
-    "socket.io": "^1.3.5",
-    "dotenv": "^1.1.0"
+    "socket.io": "^1.3.5"
   },
   "scripts": {
-    "start": "node_modules/.bin/babel-node lib/server.js",
+    "start": "node_modules/.bin/babel-node lib/server.js | node_modules/.bin/bunyan -o short",
     "test": "NODE_ENV=test node_modules/.bin/mocha"
   },
   "devDependencies": {
