--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "babel": "^5.2.15",
     "bunyan": "^1.3.6",
     "comfy": "^0.1.2",
+    "deepmerge": "^0.2.10",
     "dotenv": "^1.1.0",
     "express": "^4.12.4",
     "node-uuid": "^1.4.3",
