--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "socket.io": "^1.3.5"
   },
   "scripts": {
-    "start": "node_modules/.bin/babel-node lib/server.js | node_modules/.bin/bunyan -o short",
+    "start": "bin/start",
     "test": "NODE_ENV=test node_modules/.bin/mocha"
   },
   "devDependencies": {
