--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^1.1.0",
     "express": "^4.12.4",
     "node-uuid": "^1.4.3",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "scum-core": "scum/scum-core"
   },
   "scripts": {
     "start": "bin/start",
