--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dotenv": "^1.1.0",
     "express": "^4.12.4",
     "node-uuid": "^1.4.3",
+    "scum-core": "scum/scum-core",
     "socket.io": "^1.3.5",
-    "scum-core": "scum/scum-core"
+    "tooty": "^0.1.2"
   },
   "scripts": {
     "start": "bin/start",
